<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_pagto"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/menu_payment" />
        <item
            android:id="@+id/nav_ferias"
            android:icon="@drawable/ic_beach_access_black_24dp"
            android:title="@string/menu_vacation"/>
        <item
            android:id="@+id/nav_IR"
            android:icon="@drawable/ic_money_off_black_24dp"
            android:title="@string/imposto" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_arrow_back_black_24dp"
            android:title="@string/menu_logout"
            android:layout_marginBottom="15dp"/>
    </group>

</menu>